<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9D9D9"
    tools:context=".MainActivity">

    <View
        android:id="@+id/blackPanel"
        android:layout_width="470dp"
        android:layout_height="169dp"
        android:layout_marginStart="-40dp"
        android:layout_marginTop="-40dp"
        android:background="#282828"
        android:rotation="-8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutImg"
        android:layout_width="500dp"
        android:layout_height="195dp"
        android:layout_marginStart="-50dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="-50dp"
        android:layout_marginBottom="550dp"
        android:orientation="horizontal"
        android:rotation="-4"
        android:rotationY="00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/img1res" />

        <ImageView
            android:id="@+id/imageMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/img2res" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/img3res" />
    </LinearLayout>

    <TextView
        android:id="@+id/txvMainText"
        android:layout_width="270dp"
        android:layout_height="264dp"
        android:layout_marginBottom="140dp"
        android:width="100dp"
        android:fontFamily="@font/lexend_bold"
        android:text="@string/mainText1"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txvAnxietyWord"
        android:layout_width="268dp"
        android:layout_height="63dp"
        android:layout_marginBottom="140dp"
        android:fontFamily="@font/lexend_bold"
        android:text="@string/mainText2"
        android:textAlignment="viewStart"
        android:textColor="#F48DA2"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="138dp"
        android:layout_height="58dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#282828"
        android:fontFamily="@font/lexend_semibold"
        android:onClick="mostrarDialogo"
        android:text="@string/startText"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txvTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="270dp"
        android:fontFamily="@font/lexend_bold"
        android:text="@string/title1"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txVTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lexend_bold"
        android:text="@string/title2"
        android:textColor="#F48DA2"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/txvTitle1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txVDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lexend_bold"
        android:text="@string/title3"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/txVTitle2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/customTool"
        android:layout_width="419dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>